Translate to English & update profile to Stillly

--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@ a, button, .linkedAccountsRedirect svg, .popup-button {
         </div>
 
         <div class="elemento-para-animar delay-17">
-        <div class="presenceWrapper">
+        <div class="presenceWrapper" data-discord-id="1224512361793327117">
             <div class="presenceContainer">
                 <div class="discordInfos">
                     <div class="discordAvatar">
