Add new profile badges and tooltips

--- a/index.html
+++ b/index.html
@@ -184,11 +184,63 @@ a, button, .linkedAccountsRedirect svg, .popup-button {
                         </path>
                     </svg>
                 </div>
-                
+
+                <!-- All other available badges -->
+                <div class="profileBadge owner">
+                    <img class="badgeImg" src="img/owner.png" alt="Owner">
+                </div>
+
+                <div class="profileBadge manager">
+                    <img class="badgeImg" src="img/manager.png" alt="Manager">
+                </div>
+
+                <div class="profileBadge worldwide">
+                    <img class="badgeImg" src="img/worldwide.png" alt="WORLDWIDE">
+                </div>
+
+                <div class="profileBadge bughunter">
+                    <svg class="profileBadge" xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24"><circle cx="12" cy="12" r="9" fill="#ffffff"/></svg>
+                </div>
+
+                <div class="profileBadge earlysupporter">
+                    <svg class="profileBadge" xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24"><rect x="4" y="4" width="16" height="16" fill="#ffffff"/></svg>
+                </div>
+
+                <div class="profileBadge fire">
+                    <svg class="profileBadge" xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24"><path d="M12 2C10 6 7 7 7 11a5 5 0 0 0 10 0c0-4-3-5-5-9z" fill="#ffffff"/></svg>
+                </div>
+
+                <div class="profileBadge graphic">
+                    <svg class="profileBadge" xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24"><path d="M3 3h18v6H3zM3 15h18v6H3z" fill="#ffffff"/></svg>
+                </div>
+
+                <div class="profileBadge og">
+                    <svg class="profileBadge" xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24"><path d="M12 2l4 8h-8l4-8zM2 13h20v9H2z" fill="#ffffff"/></svg>
+                </div>
+
+                <div class="profileBadge booster">
+                    <svg class="profileBadge" xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24"><path d="M12 2l3 7h7l-6 4 2 7-6-5-6 5 2-7-6-4h7z" fill="#ffffff"/></svg>
+                </div>
+
+                <div class="profileBadge moderator">
+                    <img class="badgeImg" src="https://cdn.discordapp.com/attachments/1390322374309842964/1476428013074780231/discotools-xyz-icon6.png?ex=69a1163d&is=699fc4bd&hm=ac93437964b3a957479d9f858e1cb6e176f1e55f99e040cd950ad045f5166492&" alt="Moderator">
+                </div>
+
+                <div class="profileBadge affiliate">
+                    <img class="badgeImg" src="https://cdn.discordapp.com/attachments/1390322374309842964/1476428435676070039/discotools-xyz-icon7.png?ex=69a116a1&is=699fc521&hm=1062a937752ffe898e86fcb39816f85dff846bfe88a33535582176f0e4edb2aa&" alt="Affiliate">
+                </div>
+
+                <div class="profileBadge admin">
+                    <img class="badgeImg" src="https://cdn.discordapp.com/attachments/1390322374309842964/1476428435676070039/discotools-xyz-icon7.png?ex=69a116a1&is=699fc521&hm=1062a937752ffe898e86fcb39816f85dff846bfe88a33535582176f0e4edb2aa&" alt="Admin">
+                </div>
+
+                <div class="profileBadge donor">
+                    <img class="badgeImg" src="https://cdn.discordapp.com/attachments/1390322374309842964/1476429119536238726/discotools-xyz-icon9.png?ex=69a11744&is=699fc5c4&hm=fee26d03d16ae00697ee1cbb550d92f4d30d91cbd4f7d07c6cdb977a05bf035a&" alt="Donor">
+                </div>
             </div>
             </div>
             <div class="elemento-para-animar delay-16"><h3 id="typingText" style="color: #ffffff;" class="profileBio"></h3>
-                <i><div id="typingTexts" style="display: none;">👋 Hiya! &lt;&gt; Programmer, soon to be software engineer. &lt;&gt; I make Discord Bots! &lt;&gt; See ya! 👋 </div></i></div>
+                <i><div id="typingTexts" style="display: none;">👋 Hiya! &lt;&gt; , soon to be software engineer. &lt;&gt; I make Discord Bots! &lt;Programmer&gt; Contact: @_stillly_ on Discord, fishyboblox555@gmail.com :] </div></i></div>
             <script src="js/typing.js"></script>  
             <script src="js/badgeAnim.js"></script>
             <script src="js/title.js"></script>
