Add new profile badges and tooltips

--- a/index.html
+++ b/index.html
@@ -136,14 +136,7 @@ a, button, .linkedAccountsRedirect svg, .popup-button {
                     </svg>
                 </div>
 
-                <div style="display: flex;" class="profileBadge premium">
-                    <svg class="profileBadge" xmlns:xlink="http://www.w3.org/1999/xlink"
-                        xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="23 32 465 448" width="1.3em">
-                        <path
-                            d="M396.31 32H264l84.19 112.26L396.31 32zm-280.62 0l48.12 112.26L248 32H115.69zM256 74.67L192 160h128l-64-85.33zm166.95-23.61L376.26 160H488L422.95 51.06zm-333.9 0L23 160h112.74L89.05 51.06zM146.68 192H24l222.8 288h.53L146.68 192zm218.64 0L264.67 480h.53L488 192H365.32zm-35.93 0H182.61L256 400l73.39-208z"
-                            style="filter: drop-shadow(0 0 1.5px #ffffff) !important;" fill="#ffffff" />
-                    </svg>
-                </div>
+
 
                 <div class="profileBadge sweet">
                     <svg class="profileBadge" xmlns="http://www.w3.org/2000/svg"
@@ -187,60 +180,36 @@ a, button, .linkedAccountsRedirect svg, .popup-button {
 
                 <!-- All other available badges -->
                 <div class="profileBadge owner">
-                    <img class="badgeImg" src="img/owner.png" alt="Owner">
+                    <img class="badgeImg" src="https://cdn.discordapp.com/attachments/1390322374309842964/1476434888659042444/discotools-xyz-icon4.png?ex=69a11ca4&is=699fcb24&hm=7a6d18677a6c7923185e5a1edf2d8cfc7fd7c56ee75f74d14f0a1aa3b89926af&" alt="Owner">
                 </div>
 
                 <div class="profileBadge manager">
-                    <img class="badgeImg" src="img/manager.png" alt="Manager">
+                    <img class="badgeImg" src="https://cdn.discordapp.com/attachments/1390322374309842964/1476434889313226922/discotools-xyz-icon6.png?ex=69a11ca4&is=699fcb24&hm=a402c1e1c8b95fa34b5c6be21fe21db18e5e23004484521bdce7711c2ca3921c&" alt="Manager">
                 </div>
 
                 <div class="profileBadge worldwide">
-                    <img class="badgeImg" src="img/worldwide.png" alt="WORLDWIDE">
-                </div>
-
-                <div class="profileBadge bughunter">
-                    <svg class="profileBadge" xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24"><circle cx="12" cy="12" r="9" fill="#ffffff"/></svg>
-                </div>
-
-                <div class="profileBadge earlysupporter">
-                    <svg class="profileBadge" xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24"><rect x="4" y="4" width="16" height="16" fill="#ffffff"/></svg>
-                </div>
-
-                <div class="profileBadge fire">
-                    <svg class="profileBadge" xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24"><path d="M12 2C10 6 7 7 7 11a5 5 0 0 0 10 0c0-4-3-5-5-9z" fill="#ffffff"/></svg>
-                </div>
-
-                <div class="profileBadge graphic">
-                    <svg class="profileBadge" xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24"><path d="M3 3h18v6H3zM3 15h18v6H3z" fill="#ffffff"/></svg>
-                </div>
-
-                <div class="profileBadge og">
-                    <svg class="profileBadge" xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24"><path d="M12 2l4 8h-8l4-8zM2 13h20v9H2z" fill="#ffffff"/></svg>
-                </div>
-
-                <div class="profileBadge booster">
-                    <svg class="profileBadge" xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24"><path d="M12 2l3 7h7l-6 4 2 7-6-5-6 5 2-7-6-4h7z" fill="#ffffff"/></svg>
+                    <img class="badgeImg" src="https://cdn.discordapp.com/attachments/1390322374309842964/1476434890315665509/discotools-xyz-icon9.png?ex=69a11ca4&is=699fcb24&hm=d1a2104691c781179263fd6d5b553ac5dd26385d733d89272f26732f6e880df8&" alt="Worldwide Corporation">
                 </div>
 
                 <div class="profileBadge moderator">
-                    <img class="badgeImg" src="https://cdn.discordapp.com/attachments/1390322374309842964/1476428013074780231/discotools-xyz-icon6.png?ex=69a1163d&is=699fc4bd&hm=ac93437964b3a957479d9f858e1cb6e176f1e55f99e040cd950ad045f5166492&" alt="Moderator">
+                    <img class="badgeImg" src="https://cdn.discordapp.com/attachments/1390322374309842964/1476434888994455552/discotools-xyz-icon5.png?ex=69a11ca4&is=699fcb24&hm=a53175a4078e5113a17ba99a68bab6663b02e4b1f84ef563a9e3b69e021bb1ac&" alt="Moderator">
                 </div>
 
                 <div class="profileBadge affiliate">
-                    <img class="badgeImg" src="https://cdn.discordapp.com/attachments/1390322374309842964/1476428435676070039/discotools-xyz-icon7.png?ex=69a116a1&is=699fc521&hm=1062a937752ffe898e86fcb39816f85dff846bfe88a33535582176f0e4edb2aa&" alt="Affiliate">
+                    <img class="badgeImg" src="https://cdn.discordapp.com/attachments/1390322374309842964/1476434889640509490/discotools-xyz-icon7.png?ex=69a11ca4&is=699fcb24&hm=7a9a9ad4be06548823a5b4913f118bafc5443e1bceac64707bf2b4cc332d4cf0&" alt="Affiliate">
                 </div>
 
                 <div class="profileBadge admin">
-                    <img class="badgeImg" src="https://cdn.discordapp.com/attachments/1390322374309842964/1476428435676070039/discotools-xyz-icon7.png?ex=69a116a1&is=699fc521&hm=1062a937752ffe898e86fcb39816f85dff846bfe88a33535582176f0e4edb2aa&" alt="Admin">
+                    <img class="badgeImg" src="https://cdn.discordapp.com/attachments/1390322374309842964/1476434888071712869/discotools-xyz-icon3.png?ex=69a11ca4&is=699fcb24&hm=c982ea551a9cabfef79dbe08f67135f65a785d1df5b26f781f9a7ae9d24ba627&" alt="Admin">
                 </div>
 
                 <div class="profileBadge donor">
-                    <img class="badgeImg" src="https://cdn.discordapp.com/attachments/1390322374309842964/1476429119536238726/discotools-xyz-icon9.png?ex=69a11744&is=699fc5c4&hm=fee26d03d16ae00697ee1cbb550d92f4d30d91cbd4f7d07c6cdb977a05bf035a&" alt="Donor">
+                    <img class="badgeImg" src="https://cdn.discordapp.com/attachments/1390322374309842964/1476434889967407216/discotools-xyz-icon8.png?ex=69a11ca4&is=699fcb24&hm=cdecada160fb1f278fafa3d91662edcc182c84a0c9f004da7a944c2d834c5b33&" alt="Donor">
                 </div>
             </div>
             </div>
             <div class="elemento-para-animar delay-16"><h3 id="typingText" style="color: #ffffff;" class="profileBio"></h3>
-                <i><div id="typingTexts" style="display: none;">👋 Hiya! &lt;&gt; , soon to be software engineer. &lt;&gt; I make Discord Bots! &lt;Programmer&gt; Contact: @_stillly_ on Discord, fishyboblox555@gmail.com :] </div></i></div>
+                <i><div id="typingTexts" style="display: none;">👋 Hiya! &lt;&gt; , soon to be software engineer. &lt;&gt; I make Discord Bots! &lt;Programmer&gt; Contact: @_stillly_ on Discord. </div></i></div>
             <script src="js/typing.js"></script>  
             <script src="js/badgeAnim.js"></script>
             <script src="js/title.js"></script>
