Fix badge display: hide alt text and use local images with placeholders

--- a/index.html
+++ b/index.html
@@ -180,36 +180,37 @@ a, button, .linkedAccountsRedirect svg, .popup-button {
 
                 <!-- All other available badges -->
                 <div class="profileBadge owner">
-                    <img class="badgeImg" src="https://cdn.discordapp.com/attachments/1390322374309842964/1476434888659042444/discotools-xyz-icon4.png?ex=69a11ca4&is=699fcb24&hm=7a6d18677a6c7923185e5a1edf2d8cfc7fd7c56ee75f74d14f0a1aa3b89926af&" alt="Owner">
+                    <!-- img files should be placed in /img; download from provided URLs and rename accordingly -->
+                    <img class="badgeImg" src="img/owner.png" alt="" aria-label="Owner">
                 </div>
 
                 <div class="profileBadge manager">
-                    <img class="badgeImg" src="https://cdn.discordapp.com/attachments/1390322374309842964/1476434889313226922/discotools-xyz-icon6.png?ex=69a11ca4&is=699fcb24&hm=a402c1e1c8b95fa34b5c6be21fe21db18e5e23004484521bdce7711c2ca3921c&" alt="Manager">
+                    <img class="badgeImg" src="img/manager.png" alt="" aria-label="Manager">
                 </div>
 
                 <div class="profileBadge worldwide">
-                    <img class="badgeImg" src="https://cdn.discordapp.com/attachments/1390322374309842964/1476434890315665509/discotools-xyz-icon9.png?ex=69a11ca4&is=699fcb24&hm=d1a2104691c781179263fd6d5b553ac5dd26385d733d89272f26732f6e880df8&" alt="Worldwide Corporation">
+                    <img class="badgeImg" src="img/worldwide.png" alt="" aria-label="Worldwide Corporation">
                 </div>
 
                 <div class="profileBadge moderator">
-                    <img class="badgeImg" src="https://cdn.discordapp.com/attachments/1390322374309842964/1476434888994455552/discotools-xyz-icon5.png?ex=69a11ca4&is=699fcb24&hm=a53175a4078e5113a17ba99a68bab6663b02e4b1f84ef563a9e3b69e021bb1ac&" alt="Moderator">
+                    <img class="badgeImg" src="img/moderator.png" alt="" aria-label="Moderator">
                 </div>
 
                 <div class="profileBadge affiliate">
-                    <img class="badgeImg" src="https://cdn.discordapp.com/attachments/1390322374309842964/1476434889640509490/discotools-xyz-icon7.png?ex=69a11ca4&is=699fcb24&hm=7a9a9ad4be06548823a5b4913f118bafc5443e1bceac64707bf2b4cc332d4cf0&" alt="Affiliate">
+                    <img class="badgeImg" src="img/affiliate.png" alt="" aria-label="Affiliate">
                 </div>
 
                 <div class="profileBadge admin">
-                    <img class="badgeImg" src="https://cdn.discordapp.com/attachments/1390322374309842964/1476434888071712869/discotools-xyz-icon3.png?ex=69a11ca4&is=699fcb24&hm=c982ea551a9cabfef79dbe08f67135f65a785d1df5b26f781f9a7ae9d24ba627&" alt="Admin">
+                    <img class="badgeImg" src="img/admin.png" alt="" aria-label="Admin">
                 </div>
 
                 <div class="profileBadge donor">
-                    <img class="badgeImg" src="https://cdn.discordapp.com/attachments/1390322374309842964/1476434889967407216/discotools-xyz-icon8.png?ex=69a11ca4&is=699fcb24&hm=cdecada160fb1f278fafa3d91662edcc182c84a0c9f004da7a944c2d834c5b33&" alt="Donor">
+                    <img class="badgeImg" src="img/donor.png" alt="" aria-label="Donor">
                 </div>
             </div>
             </div>
             <div class="elemento-para-animar delay-16"><h3 id="typingText" style="color: #ffffff;" class="profileBio"></h3>
-                <i><div id="typingTexts" style="display: none;">👋 Hiya! &lt;&gt; , soon to be software engineer. &lt;&gt; I make Discord Bots! &lt;Programmer&gt; Contact: @_stillly_ on Discord. </div></i></div>
+                <i><div id="typingTexts" style="display: none;">👋 Hiya! &lt;&gt; Programmer, soon to be software engineer. &lt;&gt; I make Discord Bots! &lt;&gt; Contact: @_stillly_ on Discord. </div></i></div>
             <script src="js/typing.js"></script>  
             <script src="js/badgeAnim.js"></script>
             <script src="js/title.js"></script>
